added new image and fix it

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>XCRIPTION</h4>
-                        <p class="text-muted">Web Design & SEO</p>
+                        <p class="text-muted">Appointment</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -112,8 +112,8 @@
                         <img src="img/portfolio/startup-framework.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Adreamevents</h4>
-                        <p class="text-muted">Search Engine Optimization</p>
+                        <h4>TRANSMISSION</h4>
+                        <p class="text-muted">Walk In</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -126,8 +126,8 @@
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Nicola's Dungeon</h4>
-                        <p class="text-muted">Website Design & Developer</p>
+                        <h4>TIRES</h4>
+                        <p class="text-muted">On Time</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -140,8 +140,8 @@
                         <img src="img/portfolio/golden.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>The Tech Next Door</h4>
-                        <p class="text-muted">Web Developer</p>
+                        <h4>OIL CHANGE</h4>
+                        <p class="text-muted">Affordable</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -154,11 +154,11 @@
                         <img src="img/portfolio/escape.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>DCS Motors</h4>
-                        <p class="text-muted">Search Engine Optimization</p>
+                        <h4>BRAKE WORK</h4>
+                        <p class="text-muted">Reliable</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
+                <div class="col-md-4 col-sm-5 portfolio-item">
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -168,8 +168,8 @@
                         <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Royal-Chef</h4>
-                        <p class="text-muted">Web Developer</p>
+                        <h4>SCHEDULED MAINTENANCE</h4>
+                        <p class="text-muted">Excellent Work</p>
                     </div>
                 </div>
             </div>
@@ -246,9 +246,9 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of My
-                                    <br>Story!</h4>
+                                <h4>We 
+                                    <br>Get it
+                                    <br>Done</h4>
                             </div>
                         </li>
                     </ul>
@@ -313,9 +313,9 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <<div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                  <button type="Download" style="font-size:18px; background-color:blue; border-radius:3px; padding:20px 40px;"><a href="front end mores. (3).pdf" target="_blank">Download Resume</a></button>
+                  <button type="Download" style="font-size:18px; background-color:#cac2ca; border-radius:3px; padding:20px 40px;">(609) 477 - 4566</button>
                 </div>
             </div>
         </div>
