Worked on the index

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>XCRIPTION</h4>
+                        <h4>Our Services Include</h4>
                         <p class="text-muted">Appointment</p>
                     </div>
                 </div>
@@ -313,7 +313,7 @@
                     </div>
                 </div>
             </div>
-            <<div class="row">
+            <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                   <button type="Download" style="font-size:18px; background-color:#cac2ca; border-radius:3px; padding:20px 40px;">(609) 477 - 4566</button>
                 </div>
@@ -358,7 +358,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact Me</h2>
+                    <h2 class="section-heading">Contact Us</h2>
                     <h3 class="section-subheading text-muted">Let me know what is on your mind. Let Keep In Touch!!!</h3>
                 </div>
             </div>
@@ -444,18 +444,108 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Xcription</h2>
+                                <h2>Our Repair Services Include</h2>
                                 <p class="item-intro text-muted">Is in-home training for your health.</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/roundicons.png" alt="" target="_blank">
-                                <p>Xcription is Professional Personal traners whom will come to your fitness centers or make your home gym place to fulfill your fitnes needs feels amazing.
-                                   Xcription is a start up company base in Princeton, Lawrenceville, Montgomery, West Windsor Hamilton,
-                                    New Brunswick,  South Brunswick, North Brunswick Trenton, and Ewing</p>
-
-                                <p>You can visit this site to <a href="http://www.xcription1.com/" target="_blank">Xcription1.com</a>, or contacts for more information (609) 598-2279.</p>
                                 <ul class="list-inline">
-                                    <li>Date: July 2016</li>
-                                    <li>Client: Kenny</li>
-                                    <li>Category: In-Home Gym </li>
+                                    <h3>
+                                        <span>Engine</span>
+                                    </h3>
+                                    <span>
+                                            • Spark plugs
+                                        <br>
+                                            • Ignittion coils
+                                        <br>
+                                         • Overheating
+                                        <br>
+                                            • oil Pressure
+                                        <br>
+                                            • oil leaks
+                                        <br>
+                                            • Compression
+                                        <br>
+                                            • Engine Rebuild
+                                        <br>
+                                            • Knocking Sounds
+                                        <br>
+                                    </span>
+                                    <h3>
+                                        <span>Drive Train</span>
+                                    </h3>
+                                    <span>
+                                            • Transmissions
+                                        <br>
+                                            • Clutches
+                                        <br>
+                                            • Gearbox
+                                        <br>
+                                            • Rear axles
+                                        <br>
+                                            • Transaxles
+                                        <br>
+                                            • Differentials
+                                        <br>
+                                            • Drive shafts
+                                        <br>
+                                            • Propeller shafts
+                                        <br>
+                                    </span>
+                                    <h3>
+                                        <span>Brakes</span>
+                                    </h3>
+                                    <span>
+                                            • Brakes Pads
+                                        <br>
+                                            • Brakes Rotors
+                                        <br>
+                                            • Brakes Iines
+                                        <br>
+                                            • Automatic Brakes
+                                        <br>
+                                            • Disc Brakes
+                                        <br>
+                                            • Drum Brakes
+                                        <br>
+                                            • Hydraulics
+                                    </span>
+                                    <h3>
+                                        <span>Steering & Suspension</span>
+                                    </h3>
+                                    <span>
+                                            • Steering racks
+                                        <br>
+                                            • Alignments
+                                        <br>
+                                            • Ball joints
+                                        <br>
+                                            • Tie rods
+                                        <br>
+                                            • Power steering
+                                        <br>
+                                            • Pumps
+                                        <br>
+                                            • Power steering hoses
+                                        <br>
+                                            • Steering box
+                                    </span>
+                                    <h3>
+                                        <span>Exhaust Systems</span>
+                                    </h3>
+                                    <span>
+                                            • Mufflers
+                                        <br>
+                                            • Catalytic converters
+                                        <br>
+                                            • Exhaust pipes
+                                        <br>
+                                            • Tailpipes
+                                        <br>
+                                            • Resonators
+                                        <br>
+                                            • Piping integrity
+                                        <br>
+                                            • Clamps
+                                    </span>
                                 </ul>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
