--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                     <div class="team-member">
                         <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
                         <h4>kenny Misra</h4>
-                        <p class="text-muted">XCRIPTION</p>
+                        <p class="text-muted">Founder</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
