--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">K.A.MECHANIC SERVICES</a>
+                <a class="navbar-brand page-scroll" href="#page-top">JRC Taller MECHANIC SERVICES</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -270,7 +270,7 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <h4>kenny Misra</h4>
+                        <h4>kenny Rodriguez</h4>
                         <p class="text-muted">Founder</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
@@ -300,7 +300,7 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Jonh Nicola</h4>
+                        <h4>Isaian Rodriguez</h4>
                         <p class="text-muted">Nicola's Dungeon</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
@@ -311,7 +311,7 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div> 
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -394,7 +394,7 @@
                         </div>
                     </form>
                 </div>
-            </div>
+            </div> Isaian Rodriguez
         </div>
     </section>
 
